<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityTransaction">

    <Button
        android:id="@+id/btnRegBooksAct"
        android:layout_width="202dp"
        android:layout_height="78dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="548dp"
        android:text="@string/btnRegBookAct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnLibraryAct"
        android:layout_width="202dp"
        android:layout_height="78dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="416dp"
        android:text="@string/btnLibraryAct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegBooksAct" />

    <Button
        android:id="@+id/btnEditUserAct"
        android:layout_width="202dp"
        android:layout_height="78dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="284dp"
        android:text="@string/btnEditUserAct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLibraryAct" />
</androidx.constraintlayout.widget.ConstraintLayout>